[add] - 补充编译